# PWR-mst-sp-solver

./: Bellman_Ford.cpp  CMakeLists.txt  Graph.cpp  Kruskal.cpp  Prim.cpp  README.md  Terazjuzsdizo.cpp  Terazjuzsdizo.sln  Terazjuzsdizo.vcxproj  Terazjuzsdizo.vcxproj.filters
